--- a/templates/base.html
+++ b/templates/base.html
@@ -30,8 +30,8 @@
 
         <div class="home-link-wrap">
             <a href="{% url "threads:index" %}">
-                <img src="{% static 'images/mario.png' %}" alt="Pipeline" id='pipeline-icon_1' srcset="">
-                <img src="{% static 'images/pipeline.png' %}" alt="Pipeline" id='pipeline-icon_2' srcset="">
+                <img src="{% static 'images/logo.png' %}" alt="Pipeline" id='pipeline-icon_1' srcset="">
+
 
             </a>
         </div>
