--- a/templates/threads/thread.html
+++ b/templates/threads/thread.html
@@ -94,10 +94,12 @@
 
                                         <input type="submit" value="Comment">
 
+                                        <a href="{% url 'threads:comment_thread' read_thread.0.id %}">click me</a>
+
                                     </div>
                                 </div>
-
                             </form>
+
                         </div>
                     </div>
 
