--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -1,46 +1,103 @@
 <!DOCTYPE html>
 
 {% extends 'base.html' %}
-{% block 'title' %}<title>Profile</title>{% endblock 'title' %}
+{% load static %}
+{% block 'title' %}<title>{{userID}} Profile</title>{% endblock 'title' %}
 {% block 'content' %}
 
-{% for thread in threadss %}
-{% comment %} Only display posts specific to user {% endcomment %}
-<div class="thumb-content" id="thread_id_{{thread.id}}">
-    <div class="thumb-content-text">
-        <div class="thumb-content-group">{{thread.group}}</div>
-        <div class="thumb-content-user">{{thread.user}}</div>
-        <div class="thumb-content-title">{{thread.title}}</div>
-        <div class="thumb-content-text">{{thread.text|slice:":50"}}</div>
-        <div class="thumb-content-image"><img src="{{MEDIA_URL}}{{thread.image}}" alt="" srcset=""></div>
+
+
+<div class="main-wrap">
+    <div class="content-wrap">
+
+        <div class="sort-by-wrap">
+            New, Hot, Top
+        </div>
+
+        <div class="thumb-post-wrap">
+            {% for thread in threads %}
+            {% if thread.user.username == userID %}
+            <div class="thumb-content" id="thread_id_{{thread.id}}">
+                <div class="thumb-content-text">
+
+                    {% comment %} likes/dislikes {% endcomment %}
+                    <div class="likes-dislikes">
+                        <a href="{% url "threads:like_thread" thread.id %}">
+                            <img src="{% static 'images/upvote.png' %}" alt="" srcset="">
+                        </a>
+                        <div class="totallikes-wrap">{{thread.likes}}</div>
+                        <a href="{% url "threads:dislike_thread" thread.id %}">
+                            <img src="{% static 'images/downvote.png' %}" alt="" srcset="">
+                        </a>
+                    </div>
+
+                    {% comment %} thread image/link to more detail about post {% endcomment %}
+                    <div class="thumb-content-image">
+                        <a href="{% url 'threads:read_thread' thread.id %}">
+                            <img src="{{MEDIA_URL}}{{thread.image.url}}" alt="" srcset="">
+                        </a>
+                    </div>
+
+                    {% comment %} thread title/user/group {% endcomment %}
+                    <div class="thumb-content-avatar-group-user-wrapper">
+                        {% comment %} flex 2 columns {% endcomment %}
+
+                        <div class="thumb-content-avatar-group-user">
+                            <div class="thumb-content-title">{{thread.title}}</div>
+
+                            <div class="thumb-group-user-wrapper">
+                                <div class="thumb-content-avatar"><img src="{% static 'images/mario.png' %}" alt=""
+                                        class="group_avatar"></div>
+                                <div class="thumb-content-group"><a href="">p/{{thread.group}}</a> *</div>
+                                {% comment %} link to user profile / post date information {% endcomment %}
+                                <div class="thumb-content-user">Posted by u/<a
+                                        href="{% url "users:public_profile" thread.user.username %}">{{thread.user}}</a>
+                                    {{thread.posted_date}}
+                                </div>
+                            </div>
+
+
+
+
+
+                            {% comment %} <div class="thumb-content-text">{{thread.text|slice:":50"}}</div>
+                            {% endcomment %}
+
+                        </div>
+                        <div class="thumb-content-subpanel-wrapper">
+                            <a href="" class='subicon-href'><img class='subicons' src="{% static 'images/expand.png' %}"
+                                    alt="" srcset=""></a>
+                            <a href="{% url 'threads:read_thread' thread.id %}" class='subicon-href'><img
+                                    class='subicons' src="{% static 'images/comment.png' %}" alt="" srcset="">
+                                Comments</a>
+                            <a href="" class='subicon-href'><img class='subicons' src="{% static 'images/award.png' %}"
+                                    alt="" srcset=""> Award</a>
+                            <a href="" class='subicon-href'><img class='subicons' src="{% static 'images/share.png' %}"
+                                    alt="" srcset=""> Share</a>
+                            <a href="" class='subicon-href'><img class='subicons' src="{% static 'images/hide.png' %}"
+                                    alt="" srcset=""> Hide</a>
+                            <a href="#" class='subicon-href'><img class='subicons' src="{% static 'images/flag.png' %}"
+                                    alt="" srcset=""> Report</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+            {% endfor %}
+        </div>
+
     </div>
-    <div class="likes-dislikes">
-        <a href="{% url "threads:like_threads" thread.id %}"> Likes: {{thread.likes}} </a>
-        <a href="{% url "threads:dislike_threads" thread.id %}"> Dislikes:{{thread.dislikes}} </a>
+
+
+
+
+
+    <div class="sidebar-wrap">
+        <img src="{{user.customuser.avatar.url}}" alt="" srcset="">
     </div>
-</div>
-
-<ul class="all_users">
-
-    {% for user in avatar %}
-    {% if not user.is_superuser %}
-    {% if user not in request.user.friends.all and user != request.user %}
-    <h1>{{user}} <a href="/send_friend_request/{{user.id}}/">send friend request</a></h1>
-    {% endif %}
-    {% endif %}
-    {% endfor %}
-</ul>
-{% for friend_request in all_friend_requests %}
-<h1>{{friend_request.from_user}}
-    <a href="/accept_friend_request/{{friend_request.id}}/">
-        accept friend request</a>
-</h1>
-{% endfor %}
 
 
 
-{% endfor %}
 
 
-
-{% endblock 'content' %}
+    {% endblock 'content' %}
