--- a/templates/threads/thread.html
+++ b/templates/threads/thread.html
@@ -99,13 +99,20 @@
                                         <a href="{% url 'threads:comment_thread_child' read_thread.0.id %}"> add child
                                             me</a>
 
-                                        {% comment %} {{tree}} {% endcomment %}
-
 
                                     </div>
+
                                 </div>
                             </form>
-
+                            <div class="comment-section-wrap">
+                                <ul>
+                                    {% for each in roots %}
+                                    <li>
+                                        {{each.0}}
+                                    </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
                         </div>
                     </div>
 
@@ -117,7 +124,7 @@
     </div>
     <div class="sidebar-wrap">
         <h1>sidebar</h1>
-        {% comment %} {{get}} {% endcomment %}
+
     </div>
 </div>
 
