--- a/templates/threads/thread.html
+++ b/templates/threads/thread.html
@@ -108,7 +108,7 @@
                                 {% for each in roots %}
                                 {% for item, info in each %}
                                 {% if info.open %}
-                                <ul>
+                                <ul class='comment-section-list'>
                                     <li>
                                         {% else %}
                                     </li>
