--- a/static/CSS/threads.css
+++ b/static/CSS/threads.css
@@ -66,6 +66,10 @@
     width: 20px;
 }
 
+.thread-input-wrap {
+    width: 100%;
+    height: 200px;
+}
 
 .comment_input-wrap {
     display: flex;
@@ -76,7 +80,6 @@
     border-radius: 4px;
     border: 1px solid rgb(139, 138, 138);
     background-color: rgb(84, 82, 81);
-    margin-bottom: 150px;
 }
 
 
@@ -98,15 +101,26 @@
 .comment-section-wrap {
     display: flex;
     flex-direction: column;
-    margin-bottom: 500px;
-    padding-bottom: 500px;
     width: 45vw;
+    padding-bottom: 100px;
+}
+
+#linebreak {
+    width: 90%;
+    border: 2px solid black;
 }
 
 .comment-section-list {
     margin: 0;
     padding-bottom: 20px;
 
+}
+
+.comment-avatar {
+    height: 28px;
+    width: 28px;
+    border-radius: 100%;
+    margin-left: -12px;
 }
 
 li {
